--- a/analyse_donnee.ipynb
+++ b/analyse_donnee.ipynb
@@ -10,7 +10,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Description du jeu de données :\n",
     "- `Etat civil (Catégorique)` :\n",
@@ -670,18 +673,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Etat civil', 'Mode application', 'Ordre application', 'Cours',\n",
-       "       'Presence jour/soir', 'Qualification antérieure', 'Nationalite',\n",
-       "       'Qualification mere', 'Qualification pere', 'Occupation mere',\n",
-       "       'Occupation pere', 'Displaced', 'Educational special needs', 'Debtor',\n",
-       "       'Tuition fees up to date', 'Gender', 'Scholarship holder',\n",
-       "       'Age at enrollment', 'International',\n",
+       "Index(['Marital status', 'Application mode', 'Application order', 'Course',\n",
+       "       'Daytime/evening attendance', 'Previous qualification', 'Nacionality',\n",
+       "       'Mother's qualification', 'Father's qualification',\n",
+       "       'Mother's occupation', 'Father's occupation', 'Displaced',\n",
+       "       'Educational special needs', 'Debtor', 'Tuition fees up to date',\n",
+       "       'Gender', 'Scholarship holder', 'Age at enrollment', 'International',\n",
        "       'Curricular units 1st sem (credited)',\n",
        "       'Curricular units 1st sem (enrolled)',\n",
        "       'Curricular units 1st sem (evaluations)',\n",
@@ -698,7 +701,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Jake_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1539,9 +1542,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
