added the basic files to get started

--- a/kppv.ipynb
+++ b/kppv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,15 +126,26 @@
       "4422            -0.8 -3.12  Graduate  \n",
       "4423             3.7 -1.70  Graduate  \n",
       "\n",
-      "[4424 rows x 35 columns]\n"
+      "[4424 rows x 35 columns]\n",
+      "['Dropout' 'Graduate' 'Dropout' ... 'Dropout' 'Graduate' 'Graduate']\n"
      ]
     }
    ],
    "source": [
     "from basic_fixture import *\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "data = Dataset().get_data()\n",
-    "print(data)"
+    "data, target = Dataset().get_data()\n",
+    "print(data)\n",
+    "print(target)"
    ]
   }
  ],
