--- a/kppv.ipynb
+++ b/kppv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,22 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "most important inputs : Index(['Unités curriculaires 2e semestre (approuvées)',\n",
-      "       'Unités curriculaires 2e semestre (note)',\n",
-      "       'Unités curriculaires 1er semestre (approuvées)',\n",
-      "       'Unités curriculaires 1er semestre (note)',\n",
-      "       'Frais de scolarité à jour'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "desired_features_cnt = 5\n",
     "\n",
@@ -76,20 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nloc = np.arange(1,n_range + 1,step=1.0)\\nplt.figure(figsize = (10, 6))\\nplt.plot(range(1,n_range + 1), mean_acc)\\nplt.xticks(loc)\\nplt.xlabel('Number of Neighbors ')\\nplt.ylabel('Accuracy')\\nplt.show()\\n\""
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Preprocessing\n",
     "X_train_2 = ft.transform(x_train)\n",
@@ -131,19 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 60 candidates, totalling 180 fits\n",
-      "best score : 0.889413616686344\n",
-      "best params : {'metric': 'manhattan', 'n_neighbors': 15, 'weights': 'uniform'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "grid_params = { 'n_neighbors' : k_range,\n",
@@ -166,19 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 190 candidates, totalling 570 fits\n",
-      "best score : 0.88823297914207\n",
-      "best params : {'leaf_size': 1, 'n_neighbors': 28}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid_params = { 'n_neighbors' : k_range,\n",
     "               'leaf_size' : list(range(1,20))#,\n",
@@ -201,26 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 17640 candidates, totalling 88200 fits\n",
-      "best score : 0.8894164874773756\n",
-      "best params : {'algorithm': 'ball_tree', 'leaf_size': 1, 'metric': 'minkowski', 'n_neighbors': 9, 'p': 1, 'weights': 'uniform'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid_params = { 'n_neighbors' : k_range,\n",
     "               'weights' : ['uniform','distance'],\n",
     "               'metric' : ['minkowski','euclidean','manhattan'],\n",
     "               'algorithm' : ['ball_tree', 'kd_tree', 'brute'],\n",
     "               'p' : [1,2],\n",
-    "               'leaf_size' : list(range(1,50)),\n",
+    "               #'leaf_size' : list(range(1,50)),\n",
     "               }\n",
     "gs = GridSearchCV(KNeighborsClassifier(), grid_params, verbose = 1, cv=5, n_jobs = -1)\n",
     "g_res = gs.fit(X_train, y_train)\n",
@@ -239,22 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 2280 candidates, totalling 6840 fits\n",
-      "best score : 0.889413616686344\n",
-      "best params : {'leaf_size': 1, 'metric': 'minkowski', 'n_neighbors': 15, 'p': 1, 'weights': 'uniform'}\n",
-      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
-      "best score : 0.8823297914207006\n",
-      "best params : {'n_neighbors': 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grid_params = { 'n_neighbors' : k_range,\n",
     "               'weights' : ['uniform','distance'],\n",
@@ -286,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,38 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Control\n",
-      "train_time : 0.09649777412414551, performance : 0.7947063165664874\n",
-      "\n",
-      " set0\n",
-      "train_time : 0.08600068092346191, performance : 0.805008963408204\n",
-      "hyperparams : {'metric': 'manhattan', 'n_neighbors': 15, 'weights': 'uniform'}\n",
-      "\n",
-      " set1\n",
-      "train_time : 0.07950091361999512, performance : 0.7874143203627544\n",
-      "hyperparams : {'leaf_size': 1, 'n_neighbors': 28}\n",
-      "\n",
-      " set2\n",
-      "train_time : 0.19950461387634277, performance : 0.8119213329115259\n",
-      "hyperparams : {'algorithm': 'ball_tree', 'leaf_size': 1, 'metric': 'minkowski', 'n_neighbors': 9, 'p': 1, 'weights': 'uniform'}\n",
-      "\n",
-      " set3\n",
-      "train_time : 0.08499813079833984, performance : 0.805008963408204\n",
-      "hyperparams : {'leaf_size': 1, 'metric': 'minkowski', 'n_neighbors': 15, 'p': 1, 'weights': 'uniform'}\n",
-      "\n",
-      " set4\n",
-      "train_time : 0.07300209999084473, performance : 0.7947063165664874\n",
-      "hyperparams : {'n_neighbors': 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Control\")\n",
     "print(f'train_time : {control[\"train_time\"]}, performance : {control[\"performance\"]}')\n",
@@ -356,87 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Control\n",
-      "train_time : 0.2200002670288086, classification report : \n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.88      0.65      0.75       435\n",
-      "           1       0.80      0.94      0.86       654\n",
-      "\n",
-      "    accuracy                           0.82      1089\n",
-      "   macro avg       0.84      0.79      0.81      1089\n",
-      "weighted avg       0.83      0.82      0.82      1089\n",
-      "\n",
-      "\n",
-      " set0\n",
-      "train_time : 0.08550071716308594, classification report : \n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.95      0.63      0.76       435\n",
-      "           1       0.80      0.98      0.88       654\n",
-      "\n",
-      "    accuracy                           0.84      1089\n",
-      "   macro avg       0.87      0.81      0.82      1089\n",
-      "weighted avg       0.86      0.84      0.83      1089\n",
-      "\n",
-      "\n",
-      " set1\n",
-      "train_time : 0.07249832153320312, classification report : \n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.89      0.63      0.74       435\n",
-      "           1       0.79      0.95      0.86       654\n",
-      "\n",
-      "    accuracy                           0.82      1089\n",
-      "   macro avg       0.84      0.79      0.80      1089\n",
-      "weighted avg       0.83      0.82      0.81      1089\n",
-      "\n",
-      "\n",
-      " set2\n",
-      "train_time : 0.19500136375427246, classification report : \n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.92      0.66      0.77       435\n",
-      "           1       0.81      0.96      0.88       654\n",
-      "\n",
-      "    accuracy                           0.84      1089\n",
-      "   macro avg       0.87      0.81      0.82      1089\n",
-      "weighted avg       0.85      0.84      0.84      1089\n",
-      "\n",
-      "\n",
-      " set3\n",
-      "train_time : 0.08149981498718262, classification report : \n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.95      0.63      0.76       435\n",
-      "           1       0.80      0.98      0.88       654\n",
-      "\n",
-      "    accuracy                           0.84      1089\n",
-      "   macro avg       0.87      0.81      0.82      1089\n",
-      "weighted avg       0.86      0.84      0.83      1089\n",
-      "\n",
-      "\n",
-      " set4\n",
-      "train_time : 0.06849813461303711, classification report : \n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.88      0.65      0.75       435\n",
-      "           1       0.80      0.94      0.86       654\n",
-      "\n",
-      "    accuracy                           0.82      1089\n",
-      "   macro avg       0.84      0.79      0.81      1089\n",
-      "weighted avg       0.83      0.82      0.82      1089\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Control\")\n",
     "print(f'train_time : {control[\"train_time\"]}, classification report : \\n{control[\"classification_report\"]}')\n",
