added a comparator class

--- a/kppv.ipynb
+++ b/kppv.ipynb
@@ -2,27 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from basic_fixture import *\n",
-    "from util import evaluate_classifier\n",
+    "from util import *\n",
     "\n",
-    "import time\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "from sklearn import metrics\n",
     "from sklearn import preprocessing\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.feature_selection import chi2, SelectKBest, f_classif\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif\n",
     "\n",
     "data, target = Dataset().get_data()\n",
     "x_train, x_test, y_train, y_test = train_test_split(\n",
@@ -39,9 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "most important inputs : Index(['Unités curriculaires 2e semestre (approuvées)',\n",
+      "       'Unités curriculaires 2e semestre (note)',\n",
+      "       'Unités curriculaires 1er semestre (approuvées)',\n",
+      "       'Unités curriculaires 1er semestre (note)',\n",
+      "       'Frais de scolarité à jour'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "desired_features_cnt = 5\n",
     "\n",
@@ -63,9 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nloc = np.arange(1,n_range + 1,step=1.0)\\nplt.figure(figsize = (10, 6))\\nplt.plot(range(1,n_range + 1), mean_acc)\\nplt.xticks(loc)\\nplt.xlabel('Number of Neighbors ')\\nplt.ylabel('Accuracy')\\nplt.show()\\n\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Preprocessing\n",
     "X_train_2 = ft.transform(x_train)\n",
@@ -102,19 +120,33 @@
    "source": [
     "# Hyperparameters tuning\n",
     "\n",
-    "### 1. weights and metrics"
+    "### 1. every hyperparameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 360 candidates, totalling 1080 fits\n",
+      "best score : 0.889413616686344\n",
+      "best params : {'algorithm': 'ball_tree', 'metric': 'minkowski', 'n_neighbors': 15, 'p': 1, 'weights': 'uniform'}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "grid_params = { 'n_neighbors' : k_range,\n",
+    "grid_params = { \n",
+    "               'n_neighbors' : k_range,\n",
     "               'weights' : ['uniform','distance'],\n",
-    "               'metric' : ['minkowski','euclidean','manhattan']}\n",
+    "               'metric' : ['minkowski','euclidean','manhattan'],\n",
+    "               'algorithm' : ['ball_tree', 'kd_tree', 'brute'],\n",
+    "               'p' : [1,2],\n",
+    "               }\n",
     "gs = GridSearchCV(KNeighborsClassifier(), grid_params, verbose = 1, cv=3, n_jobs = -1)\n",
     "g_res = gs.fit(X_train, y_train)\n",
     "\n",
@@ -127,158 +159,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. p and leaf size\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_params = { 'n_neighbors' : k_range,\n",
-    "               'leaf_size' : list(range(1,20))#,\n",
-    "               #'p' : [1, 2]\n",
-    "               }\n",
-    "gs = GridSearchCV(KNeighborsClassifier(), grid_params, verbose = 1, cv=3, n_jobs = -1)\n",
-    "g_res = gs.fit(X_train, y_train)\n",
-    "\n",
-    "tuned_best_param_2 = g_res.best_params_\n",
-    "print(f'best score : {g_res.best_score_}')\n",
-    "print(f'best params : {tuned_best_param_2}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3. Everything all at once"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_params = { 'n_neighbors' : k_range,\n",
-    "               'weights' : ['uniform','distance'],\n",
-    "               'metric' : ['minkowski','euclidean','manhattan'],\n",
-    "               'algorithm' : ['ball_tree', 'kd_tree', 'brute'],\n",
-    "               'p' : [1,2],\n",
-    "               #'leaf_size' : list(range(1,50)),\n",
-    "               }\n",
-    "gs = GridSearchCV(KNeighborsClassifier(), grid_params, verbose = 1, cv=5, n_jobs = -1)\n",
-    "g_res = gs.fit(X_train, y_train)\n",
-    "\n",
-    "tuned_best_param_3 = g_res.best_params_\n",
-    "print(f'best score : {g_res.best_score_}')\n",
-    "print(f'best params : {tuned_best_param_3}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. only n_neighbors, 5. diff n_neighbors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_params = { 'n_neighbors' : k_range,\n",
-    "               'weights' : ['uniform','distance'],\n",
-    "               'metric' : ['minkowski','euclidean','manhattan'],\n",
-    "               'p' : [1,2],\n",
-    "               'leaf_size' : list(range(1,20)),}\n",
-    "gs = GridSearchCV(KNeighborsClassifier(), grid_params, verbose = 1, cv=3, n_jobs = -1)\n",
-    "g_res = gs.fit(X_train, y_train)\n",
-    "\n",
-    "tuned_best_param_4 = g_res.best_params_\n",
-    "print(f'best score : {g_res.best_score_}')\n",
-    "print(f'best params : {tuned_best_param_4}')\n",
-    "\n",
-    "grid_params = { 'n_neighbors' : [5,6]}\n",
-    "gs = GridSearchCV(KNeighborsClassifier(), grid_params, verbose = 1, cv=3, n_jobs = -1)\n",
-    "g_res = gs.fit(X_train, y_train)\n",
-    "\n",
-    "tuned_best_param_5 = g_res.best_params_\n",
-    "print(f'best score : {g_res.best_score_}')\n",
-    "print(f'best params : {tuned_best_param_5}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "control = evaluate_classifier(KNeighborsClassifier(), data, target)\n",
-    "\n",
-    "tuned_params = [tuned_best_param_1, tuned_best_param_2, tuned_best_param_3, tuned_best_param_4, tuned_best_param_5]\n",
-    "tuned = [evaluate_classifier(KNeighborsClassifier(**params), data, target) for params in tuned_params]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Performance comparisons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "control\n",
+      "KNeighborsClassifier with params {'algorithm': 'auto', 'leaf_size': 30, 'metric': 'minkowski', 'metric_params': None, 'n_jobs': None, 'n_neighbors': 5, 'p': 2, 'weights': 'uniform'}\n",
+      "train_time: 0.07249641418457031, classification report: \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.65      0.75       435\n",
+      "           1       0.80      0.94      0.86       654\n",
+      "\n",
+      "    accuracy                           0.82      1089\n",
+      "   macro avg       0.84      0.79      0.81      1089\n",
+      "weighted avg       0.83      0.82      0.82      1089\n",
+      "\n",
+      "performance: 0.7947063165664874\n",
+      "\n",
+      "with optimized hyperparameters\n",
+      "KNeighborsClassifier with params {'algorithm': 'ball_tree', 'leaf_size': 30, 'metric': 'minkowski', 'metric_params': None, 'n_jobs': None, 'n_neighbors': 15, 'p': 1, 'weights': 'uniform'}\n",
+      "train_time: 0.15900397300720215, classification report: \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.63      0.76       435\n",
+      "           1       0.80      0.98      0.88       654\n",
+      "\n",
+      "    accuracy                           0.84      1089\n",
+      "   macro avg       0.87      0.81      0.82      1089\n",
+      "weighted avg       0.86      0.84      0.83      1089\n",
+      "\n",
+      "performance: 0.805008963408204\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Control\")\n",
-    "print(f'train_time : {control[\"train_time\"]}, performance : {control[\"performance\"]}')\n",
+    "tuned_clf = [KNeighborsClassifier(), KNeighborsClassifier(**tuned_best_param_1)]\n",
+    "names = ['control', 'with optimized hyperparameters']\n",
     "\n",
-    "for i, t in enumerate(tuned):\n",
-    "    print(f'\\n set{i}')\n",
-    "    print(f'train_time : {t[\"train_time\"]}, performance : {t[\"performance\"]}')\n",
-    "    print(f'hyperparams : {tuned_params[i]}')"
+    "compare_classifiers(tuned_clf, data, target, clf_names=names)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### reports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Control\")\n",
-    "print(f'train_time : {control[\"train_time\"]}, classification report : \\n{control[\"classification_report\"]}')\n",
-    "\n",
-    "for i, t in enumerate(tuned):\n",
-    "    print(f'\\n set{i}')\n",
-    "    print(f'train_time : {t[\"train_time\"]}, classification report : \\n{t[\"classification_report\"]}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusions\n",
-    "- Tuning the leaf size does nothing for performance but does affect the training speed\n",
-    "- The hyperparameters that truly matters are : n_neighbors, metric, weights"
+    "## Observations\n",
+    "- Tuning the leaf size does nothing for performance. Same for P\n",
+    "- Increasing the sizes of K and the number of columns helps every versions but the one where we tune every hyperparameters\n",
+    "- with 10 columns every tunings have the same score of 84.20%\n",
+    "- The chosen metric seems to pretty much always choose minkowsky"
    ]
   }
  ],
